Version 2.9.3dev:

* Renamed "Joystick" to "Controller" in settings dialog.
* Improved look on Windows 10.
* Updated look for the settings dialog.
* Updated button links to option docs.
* Updated FS-UAE Launcher icon.
* CDTV games (from database) did not set CDTV model.

Version 2.9.2dev:

* Try ralphschmidt-cyberstorm-ppc-4471.rom if cyberstormppc.rom is not found.
* Also look for ralphschmidt-cyberstorm-ppc-4471.rom in Amiga Forever dir.
* Fix file name when saving controller configs on macOS.
* Fix configurations not showing up since 2.9.1dev.
* Indicate unpublished variants in variants list.
* When enabling "unpublished" entries, list unpublished variants last.
* Imported updated translations from crowdin.com.

Version 2.9.1dev:

* Added requests python library, start using for HTTPS support.
* Removed six python library.
* Sync "unpublished" games from the online game database, option to show.
* Added UI control for joystick_port_0_autoswitch.
* Can install kick33180.A500 / kick33180.A500.RTB for WHDLoad.
* Fixed save state dir when starting with UUID parameter.

Version 2.9.0dev:

* New option whdload_boot_dir must be used to enable an old feature,
  previously it was enabled by the presence of Hard Drives/WHDLoad.
* Removed some debug code left by accident (causing rating variants to fail).
* Make game scanner more forgiving if parent game uuid is not found.
* Fixed problem where rating could be reset for first loaded game/variant.
* New experimental option: relative_temp_feature.

Version 2.7.15dev:

* Imported updated translations from crowdin.com.

Version 2.7.14dev:

* Fixed recently introduced problem using joystick configuration tool.
* A3000 chip RAM was erroneously set to 1 MB.
* Added new languages to language selector: Esperanto, Dutch and Hungarian.
* Imported updated translations from crowdin.com.

Version 2.7.13dev:

* Show launch dialog when running configs directly from command line.