@@ -1,0 +1,135 @@
+# Automatically generated - do not edit by hand
+
+
+class Option(object):
+    """Constants for option names."""
+    ACCELERATOR = "accelerator"
+    ACCELERATOR_MEMORY = "accelerator_memory"
+    ARCADE_FULLSCREEN = "arcade_fullscreen"
+    AUDIO_BUFFER_TARGET_BYTES = "audio_buffer_target_bytes"
+    AUDIO_BUFFER_TARGET_SIZE = "audio_buffer_target_size"
+    AUDIO_FREQUENCY = "audio_frequency"
+    AUTOMATIC_INPUT_GRAB = "automatic_input_grab"
+    BLIZZARD_SCSI_KIT = "blizzard_scsi_kit"
+    BSDSOCKET_LIBRARY = "bsdsocket_library"
+    BUILTIN_CONFIGS = "builtin_configs"
+    CDROM_DRIVE_0_DELAY = "cdrom_drive_0_delay"
+    CDROM_DRIVE_COUNT = "cdrom_drive_count"
+    CHIP_MEMORY = "chip_memory"
+    CPU = "cpu"
+    CPU_IDLE = "cpu_idle"
+    DATABASE_ARCADE = "database_arcade"
+    DATABASE_ATARI = "database_atari"
+    DATABASE_AUTH = "database_auth"
+    DATABASE_C64 = "database_c64"
+    DATABASE_CPC = "database_cpc"
+    DATABASE_DOS = "database_dos"
+    DATABASE_EMAIL = "database_email"
+    DATABASE_FEATURE = "database_feature"
+    DATABASE_GB = "database_gb"
+    DATABASE_GBA = "database_gba"
+    DATABASE_GBC = "database_gbc"
+    DATABASE_LOCKER = "database_locker"
+    DATABASE_NES = "database_nes"
+    DATABASE_PASSWORD = "database_password"
+    DATABASE_SERVER = "database_server"
+    DATABASE_SHOW_ADULT = "database_show_adult"
+    DATABASE_SHOW_GAMES = "database_show_games"
+    DATABASE_SHOW_UNPUBLISHED = "database_show_unpublished"
+    DATABASE_SNES = "database_snes"
+    DATABASE_USERNAME = "database_username"
+    DEVICE_ID = "device_id"
+    DONGLE_TYPE = "dongle_type"
+    EXPECT_VERSION = "expect_version"
+    FADE_IN_DURATION = "fade_in_duration"
+    FAST_MEMORY = "fast_memory"
+    FLOPPY_DRIVE_COUNT = "floppy_drive_count"
+    FLOPPY_DRIVE_SPEED = "floppy_drive_speed"
+    FLOPPY_DRIVE_VOLUME = "floppy_drive_volume"
+    FLOPPY_DRIVE_VOLUME_EMPTY = "floppy_drive_volume_empty"
+    FREEZER_CARTRIDGE = "freezer_cartridge"
+    FSAA = "fsaa"
+    FULL_KEYBOARD = "full_keyboard"
+    FULLSCREEN = "fullscreen"
+    FULLSCREEN_MODE = "fullscreen_mode"
+    GRAPHICS_CARD = "graphics_card"
+    GRAPHICS_MEMORY = "graphics_memory"
+    INITIAL_INPUT_GRAB = "initial_input_grab"
+    IRC_NICK = "irc_nick"
+    IRC_SERVER = "irc_server"
+    JIT_COMPILER = "jit_compiler"
+    JOYSTICK_PORT_0_AUTOSWITCH = "joystick_port_0_autoswitch"
+    KEEP_ASPECT = "keep_aspect"
+    KEYBOARD_INPUT_GRAB = "keyboard_input_grab"
+    KEYBOARD_KEY_BACKSLASH = "keyboard_key_backslash"
+    KEYBOARD_KEY_EQUALS = "keyboard_key_equals"
+    KEYBOARD_KEY_INSERT = "keyboard_key_insert"
+    KEYBOARD_KEY_LESS = "keyboard_key_less"
+    KICKSTART_SETUP = "kickstart_setup"
+    LAUNCHER_CONFIG_FEATURE = "launcher_config_feature"
+    LAUNCHER_FONT_SIZE = "launcher_font_size"
+    LAUNCHER_THEME = "launcher_theme"
+    LOAD_STATE = "load_state"
+    LOG_AUTOSCALE = "log_autoscale"
+    LOG_BSDSOCKET = "log_bsdsocket"
+    LOG_FLUSH = "log_flush"
+    LOG_INPUT = "log_input"
+    LOG_QUERY_PLANS = "log_query_plans"
+    LOW_LATENCY_VSYNC = "low_latency_vsync"
+    MIDDLE_CLICK_UNGRAB = "middle_click_ungrab"
+    MIN_FIRST_LINE_NTSC = "min_first_line_ntsc"
+    MIN_FIRST_LINE_PAL = "min_first_line_pal"
+    MONITOR = "monitor"
+    MOTHERBOARD_RAM = "motherboard_ram"
+    MOUSE_SPEED = "mouse_speed"
+    NETPLAY_FEATURE = "netplay_feature"
+    NETPLAY_TAG = "netplay_tag"
+    NETWORK_CARD = "network_card"
+    PLATFORM = "platform"
+    RAW_INPUT = "raw_input"
+    RELATIVE_PATHS = "relative_paths"
+    RELATIVE_TEMP_FEATURE = "relative_temp_feature"
+    RTG_SCANLINES = "rtg_scanlines"
+    SAVE_DISK = "save_disk"
+    SCANLINES = "scanlines"
+    SLOW_MEMORY = "slow_memory"
+    SOUND_CARD = "sound_card"
+    STEREO_SEPARATION = "stereo_separation"
+    SWAP_CTRL_KEYS = "swap_ctrl_keys"
+    TEXTURE_FILTER = "texture_filter"
+    TEXTURE_FORMAT = "texture_format"
+    UAE_A2065 = "uae_a2065"
+    UAE_A3000MEM_SIZE = "uae_a3000mem_size"
+    UAE_CHIPSET_COMPATIBLE = "uae_chipset_compatible"
+    UAE_CPU_FREQUENCY = "uae_cpu_frequency"
+    UAE_CPU_MULTIPLIER = "uae_cpu_multiplier"
+    UAE_CPU_SPEED = "uae_cpu_speed"
+    UAE_CPU_THROTTLE = "uae_cpu_throttle"
+    UAE_FASTMEM2_SIZE = "uae_fastmem2_size"
+    UAE_FASTMEM_AUTOCONFIG = "uae_fastmem_autoconfig"
+    UAE_FASTMEM_SIZE = "uae_fastmem_size"
+    UAE_FORCE_0X10000000_Z3 = "uae_force_0x10000000_z3"
+    UAE_GFX_LINEMODE = "uae_gfx_linemode"
+    UAE_MBRESMEM_SIZE = "uae_mbresmem_size"
+    UAE_RTC = "uae_rtc"
+    UAE_SANA2 = "uae_sana2"
+    UAE_SLIRP_IMPLEMENTATION = "uae_slirp_implementation"
+    UAE_SOUND_OUTPUT = "uae_sound_output"
+    UAE_TOCCATA = "uae_toccata"
+    UAE_Z3CHIPMEM_SIZE = "uae_z3chipmem_size"
+    UAE_Z3MAPPING = "uae_z3mapping"
+    UAE_Z3MEM2_SIZE = "uae_z3mem2_size"
+    UAE_Z3MEM_SIZE = "uae_z3mem_size"
+    UAEGFX_CARD = "uaegfx_card"
+    UAEM_WRITE_FLAGS = "uaem_write_flags"
+    VIDEO_FORMAT = "video_format"
+    VIDEO_SYNC = "video_sync"
+    VIDEO_SYNC_METHOD = "video_sync_method"
+    VOLUME = "volume"
+    WARP_MODE = "warp_mode"
+    WHDLOAD_BOOT_DIR = "whdload_boot_dir"
+    WHDLOAD_QUIT_KEY = "whdload_quit_key"
+    WHDLOAD_SPLASH_DELAY = "whdload_splash_delay"
+    WINDOW_BORDER = "window_border"
+    ZOOM = "zoom"
+    ZORRO_III_MEMORY = "zorro_iii_memory"
