@@ -1,7 +1,6 @@
 import fsui
 from launcher.i18n import gettext
 from launcher.ui.settings.settings_page import SettingsPage
-from fsgs.FSGSDirectories import FSGSDirectories
 
 
 class WHDLoadSettingsPage(SettingsPage):
@@ -20,13 +19,14 @@ class WHDLoadSettingsPage(SettingsPage):
         self.layout.add(label, fill=True, margin_top=0)
 
         self.add_option("whdload_splash_delay")
+        self.add_option("whdload_quit_key")
 
-        label = fsui.Label(
-            self, gettext("Directory for WHDLoad.key file (if you have it):"))
-        self.layout.add(label, margin_top=10)
-        hor_layout = fsui.HorizontalLayout()
-        self.layout.add(hor_layout, margin_top=4, fill=True)
-        label = fsui.Label(
-            self, FSGSDirectories.get_base_dir())
-        hor_layout.add_spacer(0, expand=True)
-        hor_layout.add(label)
+        # label = fsui.Label(
+        #     self, gettext("Directory for WHDLoad.key file (if you have it):"))
+        # self.layout.add(label, margin_top=10)
+        # hor_layout = fsui.HorizontalLayout()
+        # self.layout.add(hor_layout, margin_top=4, fill=True)
+        # label = fsui.Label(
+        #     self, FSGSDirectories.get_base_dir())
+        # hor_layout.add_spacer(0, expand=True)
+        # hor_layout.add(label)
