@@ -1,5 +1,6 @@
 Version 2.9.3dev:
 
+* New option whdload_quit_key to set global quit key, added to settings UI.
 * Renamed "Joystick" to "Controller" in settings dialog.
 * Improved look on Windows 10.
 * Updated look for the settings dialog.
